# GithubProjectDiscordBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  github_id_to_discord_id_mapping.yaml  github_usernames_to_discord_id_mapping.json  pyproject.toml
.github/workflows/: ci.yaml
src/: bot.py  main.py  server.py
src/tests/: conftest.py  test_e2e.py  utils.py
src/tests/test_integration/: test_bot.py  test_server.py
src/tests/test_unit/: test_bot.py  test_process.py  test_server.py  test_utils.py
src/tests/test_unit/test_utils/: test_datatypes.py  test_discord_rest_client.py  test_github_api.py  test_misc.py  test_signature_verification.py
src/utils/: __init__.py  data_types.py  discord_rest_client.py  error.py  github_api.py  logging.py  misc.py  signature_verification.py  utils.py
