[project]
name = "githubprojectdiscordbot"
version = "1.0.0"
description = "Create post on forum channel for github project cards"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.117.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "ruff>=0.13.1",
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[project.scripts]
start-app = "src.main:main"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade (modern Python syntax)
    "N",  # PEP8 Naming
]
