[project]
name = "github-project-discord-bot"
version = "1.0.0"
description = "Create post on forum channel for github project cards"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "aiorwlock>=1.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "hikari>=2.5.0",
    "setuptools>=80.9.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[dependency-groups]
prod = [
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.38.0"
]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
    "pre-commit>=4.4.0",
    "httpx>=0.28.1" # required for testing FastAPI endpoints
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"

[project.scripts]
start-app = "src.main:main"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade (modern Python syntax)
    "N",  # PEP8 Naming
]
